tests/sema/bad/10_cmp_mismatch.sg
let a:int = 1;
let b:float = 2.0;
let ok:bool = a < b;
